# ballroomdj-4

./: .hgignore  .hgtags  Alpha-ChangeLog.txt  BUILD.txt  ChangeLog.txt  LICENSE.txt  README.md  README.txt  VERSION.txt
src/: CMakeLists.txt  Makefile  config.h.in
src/check/: CMakeLists.txt  check_all.c  check_autosel.c  check_bdj.h  check_bdjmsg.c  check_bdjopt.c  check_bdjstring.c  check_bdjvars.c  check_bdjvarsdf.c  check_bdjvarsdfload.c  check_colorutils.c  check_dance.c  check_dancesel.c  check_datafile.c  check_dirlist.c  check_dirop.c  check_dispsel.c  check_dnctypes.c  check_filedata.c  check_filemanip.c  check_fileop.c  check_fileshared.c  check_genre.c  check_ilist.c  check_istring.c  check_level.c  check_libbasic.c  check_libbdj4.c  check_libcommon.c  check_lock.c  check_mdebug.c  check_msgparse.c  check_musicdb.c  check_nlist.c  check_orgopt.c  check_orgutil.c  check_osdir.c  check_osnetutils.c  check_osprocess.c  check_osrandom.c  (+31 more)
src/configui/: CMakeLists.txt  bdj4configui.c  confas.c  confcommon.c  confdance.c  confdebug.c  confdialog.c  confdispset.c  conffilter.c  confgeneral.c  confgenre.c  confgui.c  confitunes.c  conflevel.c  confmarquee.c  confmobmq.c  confmusicq.c  conforg.c  confplayer.c  confplayerqueue.c  confpopulate.c  confrating.c  confrc.c  confstatus.c  conftable.c  conftableadd.c  conftabledance.c  conftableset.c  confui.c
src/include/: aesencdec.h  asconf.h  ati.h  atibdj4.h  atibdj4asf.h  atioggutil.h  ativcutil.h  audioadjust.h  audiofile.h  audioid.h  audiosrc.h  audiotag.h  autosel.h  bdj4.h  bdj4arg.h  bdj4init.h  bdj4intl.h  bdj4itunes.h  bdj4ui.h  bdjmsg.h  bdjopt.h  bdjregex.h  bdjstring.h  bdjvars.h  bdjvarsdf.h  bdjvarsdfload.h  callback.h  colorutils.h  configui.h  conn.h  continst.h  controller.h  dance.h  dancesel.h  datafile.h  dbus.h  dbusi.h  dirlist.h  dirop.h  dispsel.h  (+145 more)
src/installer/: CMakeLists.txt  bdj4altinst.c  bdj4altsetup.c  bdj4cleaninst.c  bdj4installer.c  bdj4se.c  bdj4updater.c  locatebdj3.c
src/libati/: CMakeLists.txt  ati.c  atibdj4.c  atibdj4asf.c  atibdj4flac.c  atibdj4id3.c  atibdj4mp3.c  atibdj4mp4.c  atibdj4mp4.cpp  atibdj4ogg.c  atibdj4oggutil.c  atibdj4opus.c  atibdj4riff.c  atiffmpeg.c  atimutagen.c  atinull.c  atioggutil.c  atitaglib.cpp  atitagparser.cpp  atiutil.c  ativcutil.c
src/libaudioid/: CMakeLists.txt  acoustid.c  acrcloud.c  audioid.c  audioidjson.c  audioidparse.c  audioidutil.c  audioidxml.c  musicbrainz.c
src/libaudiosrc/: CMakeLists.txt  audiosrc.c  audiosrcbdj4.c  audiosrcfile.c  audiosrchttps.c  audiosrcpodcast.c  audiosrcutil.c  audiosrcyoutube.c  rss.c
src/libaudiotag/: CMakeLists.txt
src/libbasic/: CMakeLists.txt  asconf.c  bdjopt.c  datafile.c  dirlist.c  dyintfc.c  ilist.c  istring.c  list.c  localeutil.c  lock.c  nlist.c  oslinuxsleep.c  osmacsleep.m  oswinsleep.c  procutil.c  progstate.c  rafile.c  slist.c  xmlparse.c
src/libbdj4/: CMakeLists.txt  aesencdec.c  asconf.c  audioadjust.c  audiotag.c  autosel.c  bdj4init.c  bdj4itunes.c  bdjvarsdf.c  bdjvarsdfload.c  dance.c  dancesel.c  dispsel.c  dnctypes.c  expimpbdj4.c  genre.c  grouping.c  imppl.c  instutil.c  itunes.c  jspf.c  level.c  m3u.c  mp3exp.c  msgparse.c  musicdb.c  musicq.c  orgopt.c  orgutil.c  playlist.c  podcast.c  podcastutil.c  quickedit.c  rating.c  rss.c  samesong.c  sequence.c  song.c  songdb.c  songfav.c  (+14 more)
src/libbdj4ui/: CMakeLists.txt  osuilinuxutils.c  osuimacutils.m  osuiwinutils.c  uiapp.c  uiapplyadj.c  uiaudioid.c  uiaudioidui.c  uicopytags.c  uidance.c  uidd.c  uiduallist.c  uiexp.c  uiexpimpbdj4.c  uiexppl.c  uiextreq.c  uifavorite.c  uigenre.c  uilevel.c  uimusicq.c  uimusicqcommon.c  uimusicqgtk.c  uimusicqui.c  uinbutil.c  uiplayer.c  uiplaylist.c  uiquickedit.c  uirating.c  uireqext.c  uiselectfile.c  uisong.c  uisongedit.c  uisongeditgtk.c  uisongeditui.c  uisongfilter.c  uisongsel.c  uisongselcommon.c  uisongselgtk.c  uisongselui.c  uistatus.c  (+4 more)
src/libbdjregex/: CMakeLists.txt  bdjregex.c
src/libcommon/: CMakeLists.txt  bdj4arg.c  bdjmsg.c  bdjregex.c  bdjstring.c  bdjvars.c  callback.c  colorutils.c  conn.c  dbusi.c  dirop.c  dylib.c  filedata.c  filemanip.c  fileop.c  fileshared.c  fileutil.c  log.c  mdebug.c  osdir.c  osdirutil.c  osenv.c  oslinuxlocale.c  oslinuxutils.c  oslocale.c  osmaclocale.m  osmacutils.m  osnetutils.c  osprocess.c  osrandom.c  ossignal.c  osutils.c  oswinlocale.c  oswinprocess.c  oswinutils.c  pathbld.c  pathdisp.c  pathinfo.c  pathutil.c  queue.c  (+10 more)
src/libcont/: CMakeLists.txt  controller.c  macnp.m  macosnp.m  mpnp.m  mpris-root.xml  mprisi.c  smtc.cpp
src/libdylib/: CMakeLists.txt  dyintfc.c  dylib.c
src/liblocbdj3/: CMakeLists.txt  locatebdj3.c
src/libmpris/: CMakeLists.txt  dbusi.c  mpris-player.xml  mpris-root.xml
src/libpli/: CMakeLists.txt  MPRIS.txt  dbusi.c  gsti.c  macosav.m  macosavi.m  mprisi.c  mpvi.c  pli.c  pligst.c  plimacosav.c  plimpris.c  plimpv.c  plinull.c  plivlc.c  plivlc4.c  pliwin.c  pliwinmp.c  vlc4i.c  vlci.c  wini.cpp  winmpi.cpp
src/libui/: uiwcont.c  uiwcontfree.c
src/libuibase/: CMakeLists.txt  osuilinuxutils.c  osuimacutils.m  osuiwinutils.c  uiutils.c
src/libuicommon/: CMakeLists.txt  continst.c  uimusicq.c  uimusicqcommon.c  uimusicqui.c  uiplayer.c  uisongfilter.c  uisongsel.c  uisongselcommon.c  uisongselui.c
src/libuicurses/: CMakeLists.txt  uiclipboard.c  uidialog.c  uientry.c  uilabel.c  uinotebook.c  uipanedwindow.c  uiscale.c  uiscrollbar.c  uisep.c  uisizegrp.c  uiswitch.c  uitoggle.c  uiui.c
src/libuigeneral/: CMakeLists.txt  uibox.c  uibutton.c  uientry.c  uientryval.c  uifont.c  uilabel.c  uiwcont.c  uiwcontfree.c
src/libuigtk3/: CMakeLists.txt  uibox.c  uibutton.c  uichgind.c  uiclipboard.c  uidialog.c  uidragdrop.c  uientry.c  uievents.c  uigeneral.c  uigtkadjustment.c  uigtkbox.c  uigtkbutton.c  uigtkchgind.c  uigtkclipboard.c  uigtkdialog.c  uigtkdragdrop.c  uigtkdropdown.c  uigtkentry.c  uigtkevents.c  uigtkimage.c  uigtkkeys.c  uigtklabel.c  uigtklink.c  uigtkmenu.c  uigtkmiscbutton.c  uigtknotebook.c  uigtkosmac.m  uigtkpanedwindow.c  uigtkpbar.c  uigtkscale.c  uigtkscrollbar.c  (+33 more)
(+1431 files in other folders)
