#
# Copyright 2021-2023 Brad Lanam Pleasant Hill CA
#
cmake_minimum_required (VERSION 3.18)

include (../utils/bdj4macros.cmake)

# add_library (libbdj4audiotag SHARED
#   audiotag.c
# )
# target_link_libraries (libbdj4audiotag
#   libdylib
#   libbdj4basic libbdj4common
#   m
# )

# add_library (libatmutagen SHARED atmutagen.c)
# target_link_libraries (libatmutagen
#   libbdj4string
# )

# install (TARGETS
#   libbdj4audiotag
#   DESTINATION ${PROJECT_SOURCE_DIR}/../bin
# )
